# UEFI-Bootkit-Analysis

./: .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  install.sh
.github/workflows/: analysis.yml
rust_analyzer/: Cargo.toml
rust_analyzer/src/: entropy.rs  main.rs  pe_parser.rs
scripts/: resolve_gbs.py  security_check.py
tests/: test_analysis.py
yara/: blacklotus_bootkit.yar
