[package]
name = "rust_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
pelite = "0.10.0" # PE binary parsing and IAT mapping
clap = { version = "4.4.7", features = ["derive"] } # CLI parsing
serde = { version = "1.0", features = ["derive"] } # JSON structuring
serde_json = "1.0" # JSON Output
